Adapt to new CSS

--- a/webpage/main.html
+++ b/webpage/main.html
@@ -1,26 +1,27 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Main</title>
-        <link rel="stylesheet" type="text/css" href="css/def.css">
-        <style type="text/css">                    body {font-family: verdana}
-            table {font-family: arial}
-            .tab { margin-left: 40px; }
-        </style>
+  <head>
+    <title>Main</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+      <style type="text/css">
+        body {font-family: verdana}
+        table {font-family: arial}
+        .tab { margin-left: 40px; }
+      </style>
     </head>
-<body>
-    <div id="container">
-    <div align="center">
-    <font size="6">
-        ATLAS EDM Trigger Size Monitoring Homepage
-    </font>
-    </p>
-    </div>
-    <p> 
-    </br>
-    This page lists the most recent EDM size tests that fall outside the nominal range.<br/>
-    Click on the links to go to summary of the results.
+    <body>
+      <div id="container">
+        <div align="center">
+          <font size="6">
+            ATLAS EDM Trigger Size Monitoring Homepage
+          </font>
+        </p>
+      </div>
+      <p> 
+      </br>
+      This page lists the most recent EDM size tests that fall outside the nominal range.<br/>
+      Click on the links to go to summary of the results.
     </p>
     <hr/>
 
