--- a/webpage/main.html
+++ b/webpage/main.html
@@ -4,6 +4,7 @@
   <head>
     <title>Main</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta http-equiv="pragma" content="no-cache" />
       <style type="text/css">
         body {font-family: verdana}
         table {font-family: arial}
@@ -14,26 +15,123 @@
       <div id="container">
         <div align="center">
           <font size="6">
-            ATLAS EDM Trigger Size Monitoring Homepage
+            <b><i>ATLAS</i> EDM Trigger Size Monitoring Homepage</b>
           </font>
         </p>
       </div>
       <p> 
       </br>
-      This page lists the most recent EDM size tests that fall outside the nominal range.<br/>
-      Click on the links to go to summary of the results.
+        <div align="center">
+          <hr>
+          Welcome to the EDM web monitoring<br/>
+          The page lists <b>only</b> the tests that fall outside the nominal range.<br/>
+          Click on the links below to monitor the test or use the menu 
+          on the left to navigate. <br/>
+        </div>
     </p>
-    <hr/>
+    <hr>
 
 <div id="container">
 <font size="4">  
-Branch: 21.0; Project: Athena; Platform: x86_64-slc6-gcc62-opt
+<b>21.0</b> <b>Athena</b> [x86_64-slc6-gcc62-opt]
 </font>
 </p>
 <div id="container">
-Category - Squark</br>
+<b>Muon</b></br>
 <p class="tab">
-2018-03-09T1031&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_mc_pp_v7_rdotoesdaod_grid.html#Squark">test_mc_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Muon">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Bphys</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Bphys">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Jet</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Jet">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Tau</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Tau">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Cosmics</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Cosmics">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>MinBias</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#MinBias">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>MET</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#MET">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Tracking</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Tracking">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>TotalAOD</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#TotalAOD">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Calo</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Calo">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Egamma</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Egamma">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Total</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Total">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Bjet</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Bjet">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
+      </p>
+</div><!--container-->
+<div id="container">
+<b>Steer</b></br>
+<p class="tab">
+2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Steer">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
+
       </p>
 </div><!--container-->
     </div><!--container-->
