--- a/webpage/menu.html
+++ b/webpage/menu.html
@@ -4,7 +4,7 @@
   <head>
     <title>Menu</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"><base target="Right"/>
-
+    <meta http-equiv="pragma" content="no-cache" />
       <style type="text/css">
         body {font-family: sans-serif}
         table {font-family: sans-serif}
@@ -16,13 +16,13 @@
     <body bgcolor="white">
       <center>
         <nav>
-          <a class="button -alge center" target="main" href="main.html"><b>Home</b></a>
+          <a class="button -dark center" target="main" href="main.html">Home</a>
         </nav>
         <nav>
           <ul>
-<li><a class="button -dark center"  target="main" href="overview_html/overview_master_M12_x86_64-slc6-gcc62-opt.html">master<br/>M12<br/>x86_64-slc6-gcc62-opt</a></li>
-<li><a class="button -dark center"  target="main" href="overview_html/overview_master_Athena_x86_64-slc6-gcc62-opt.html">master<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
-<li><a class="button -dark center"  target="main" href="overview_html/overview_21.0_Athena_x86_64-slc6-gcc62-opt.html">21.0<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.0-TrigMC_Athena_x86_64-slc6-gcc62-opt.html">21.0-TrigMC<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.1_AthenaP1_x86_64-slc6-gcc62-opt.html">21.1<br/>AthenaP1<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.0_Athena_x86_64-slc6-gcc62-opt.html">21.0<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
 
 </ul>
 </nav>
