Modify cronjob example to run the monitoring every 30 min

--- a/webpage/menu.html
+++ b/webpage/menu.html
@@ -16,13 +16,13 @@
     <body bgcolor="white">
       <center>
         <nav>
-          <a class="button -dark center" target="main" href="main.html">Home</a>
+          <a class="button -dark center" target="main" href="main.html?v=20180511T1716">Home</a>
         </nav>
         <nav>
           <ul>
-<li><a class="button -regular center" target="main" href="overview_html/overview_21.0-TrigMC_Athena_x86_64-slc6-gcc62-opt.html">21.0-TrigMC<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
-<li><a class="button -regular center" target="main" href="overview_html/overview_21.1_AthenaP1_x86_64-slc6-gcc62-opt.html">21.1<br/>AthenaP1<br/>x86_64-slc6-gcc62-opt</a></li>
-<li><a class="button -regular center" target="main" href="overview_html/overview_21.0_Athena_x86_64-slc6-gcc62-opt.html">21.0<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.0-TrigMC_Athena_x86_64-slc6-gcc62-opt.html?v=20180511T1716">21.0-TrigMC<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.1_AthenaP1_x86_64-slc6-gcc62-opt.html?v=20180511T1716">21.1<br/>AthenaP1<br/>x86_64-slc6-gcc62-opt</a></li>
+<li><a class="button -regular center" target="main" href="overview_html/overview_21.0_Athena_x86_64-slc6-gcc62-opt.html?v=20180511T1716">21.0<br/>Athena<br/>x86_64-slc6-gcc62-opt</a></li>
 
 </ul>
 </nav>
