--- a/webpage/main.html
+++ b/webpage/main.html
@@ -24,117 +24,12 @@
         <div align="center">
           <hr>
           Welcome to the EDM web monitoring<br/>
-          The page lists <b>only</b> the tests that fall outside the nominal range.<br/>
-          Click on the links below to monitor the test or use the menu 
-          on the left to navigate. <br/>
+          <font size="7">
+          <b>GOOD NEWS! <br/> There are no bad tests!</b>
+          <br/>
+          <font size="6">
         </div>
     </p>
     <hr>
-
-<div id="container">
-<font size="4">  
-<b>21.0</b> <b>Athena</b> [x86_64-slc6-gcc62-opt]
-</font>
-</p>
-<div id="container">
-<b>Muon</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Muon">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Bphys</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Bphys">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Jet</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Jet">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Tau</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Tau">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Cosmics</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Cosmics">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>MinBias</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#MinBias">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>MET</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#MET">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Tracking</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Tracking">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>TotalAOD</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#TotalAOD">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Calo</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Calo">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Egamma</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Egamma">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Total</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Total">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Bjet</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Bjet">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-<div id="container">
-<b>Steer</b></br>
-<p class="tab">
-2018-03-25T2154&nbsp;&nbsp; <a style="color:;"href="sample_html/sample_21.0_Athena_x86_64-slc6-gcc62-opt_test_physics_pp_v7_rdotoesdaod_grid.html#Steer">test_physics_pp_v7_rdotoesdaod_grid</a>&nbsp;&nbsp;
-
-      </p>
-</div><!--container-->
-    </div><!--container-->
-
   </body>
 </html>
